kuber-homeworks/14/files/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
      group: test
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 80
  - name: multitool
    protocol: TCP
    port: 8080
    targetPort: 8080
...
